--- a/configure.ac
+++ b/configure.ac
@@ -8,25 +8,28 @@ AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([
  Makefile
  src/Makefile
+ src/librw2chipcstdexec.pc
 ])
+
+PKG_PROG_PKG_CONFIG
 
 AC_ARG_ENABLE([use-submodules],
     AS_HELP_STRING([--enable-use-submodules], [Enable use submodules]))
 AM_CONDITIONAL([USE_SUBMODULES], [test x"$enable_use_submodules" = "xyes"])
 
 AC_CONFIG_MACRO_DIR([m4])
-#AC_CONFIG_SUBDIRS([glitter])
 
 AC_CHECK_HEADERS([stdlib.h unistd.h sys/types.h])
-AC_CHECK_HEADERS([glitter.h ezfork.h restart.h sfork.h rw2chipc.h rw2chipcstd.h])
+#AC_CHECK_HEADERS([glitter.h ezfork.h restart.h sfork.h rw2chipc.h rw2chipcstd.h])
 
-AC_CHECK_LIB([stdlib],[fork],[ezfork],[restart],[sfork],[rw2chipc],[rw2chipcstd])
+#AC_CHECK_LIB([stdlib],[fork],[ezfork],[restart],[sfork],[rw2chipc],[rw2chipcstd])
+AC_CHECK_LIB([stdlib],[fork])
 
-#srcdir = @srcdir@
-#LIBRW2CHIPCSTDEXEC_LIBADD="`PATH=$(srcdir)src:$PATH librw2chipcstdexec_config --libs`"
-LIBRW2CHIPCSTDEXEC_LIBADD="`PATH=src:$PATH librw2chipcstdexec_config --libs`"
-AC_SUBST(LIBRW2CHIPCSTDEXEC_LIBADD)
+PKG_CHECK_MODULES([GLITTER],[glitter],,)
+PKG_CHECK_MODULES([RESTART],[librestart],,)
+PKG_CHECK_MODULES([RW2CHIPCSTD],[librw2chipcstd],,)
 
 INNOVANON_WARNINGS([])
 
 AC_OUTPUT
+
