--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,10 @@
-#SUBDIRS = glitter src
+# Install the pkg-config file.
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = src/librw2chipcstdexec.pc
+
+DISTCLEANFILES = $(pkgconfig_DATA)
+EXTRA_DIST = src/librw2chipcstdexec.pc.in
+
 SUBDIRS = src
 dist_doc_DATA = README.md
 ACLOCAL_AMFLAGS = -I m4
